--- a/index.html
+++ b/index.html
@@ -862,14 +862,13 @@
         <button onclick="fecharModal(event)">Lembrar Depois</button>
     </div>
 </div>
+
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-messaging-compat.js"></script> 
 <script>
-// ALTERAÇÃO INICIADA: Adicionar constante de versão
-const APP_VERSION = "1.0.0"; // Mude esta versão a cada atualização
-// ALTERAÇÃO FINALIZADA
+const APP_VERSION = "1.0.0"; 
 
 // Firebase e variáveis globais
 const firebaseConfig = {
@@ -882,7 +881,7 @@ const firebaseConfig = {
 };
 firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth(), db = firebase.firestore();
-// Este código força o Firebase a "lembrar" do usuário mesmo se o app for fechado.
+
 auth.setPersistence(firebase.auth.Auth.Persistence.LOCAL)
   .then(() => {
     console.log("Persistência de autenticação definida para 'local'. O usuário ficará logado.");
@@ -923,20 +922,10 @@ let adminUserBalances = {};
 let globalChatListener = null;
 let lastGlobalMessageTimestamp = null;
 
-// ALTERAÇÃO INICIADA: Variáveis para controle de popups
 let deferredInstallPrompt = null;
 let versaoInterval = null;
-// ALTERAÇÃO FINALIZADA
 
 
-// ALTERAÇÃO INICIADA: LÓGICA DE NOTIFICAÇÃO CENTRALIZADA E CORRIGIDA
-/**
- * Função principal para enviar uma notificação via backend.
- * Esta é a ÚNICA função que deve se comunicar com o backend do Render.
- * @param {string} uid - O UID do usuário de destino.
- * @param {string} title - O título da notificação.
- * @param {string} body - O corpo da mensagem da notificação.
- */
 async function enviarNotificacaoParaBackend(uid, title, body) {
   const backendUrl = "https://navalhabackend.onrender.com";
   const notificationEndpoint = "/enviar-notificacao";
@@ -965,29 +954,17 @@ async function enviarNotificacaoParaBackend(uid, title, body) {
   }
 }
 
-/**
- * Função para notificar um usuário específico.
- * @param {string} uid - O UID do usuário a ser notificado.
- * @param {string} title - O título da notificação.
- * @param {string} body - O corpo da mensagem da notificação.
- */
 async function notifyUser(uid, title, body) {
     if (!uid) return;
     console.log(`Disparando notificação para UID: ${uid} - Título: ${title}`);
     await enviarNotificacaoParaBackend(uid, title, body);
 }
 
-/**
- * Função auxiliar para notificar todos os administradores.
- * @param {string} title - O título da notificação.
- * @param {string} body - O corpo da mensagem da notificação.
- */
 async function notifyAdmins(title, body) {
     try {
         const adminQuery = await db.collection("usuarios").where("tipo", "==", "admin").get();
         if (!adminQuery.empty) {
             adminQuery.forEach(adminDoc => {
-                // Envia para cada admin individualmente
                 notifyUser(adminDoc.id, title, body);
             });
         }
@@ -995,7 +972,6 @@ async function notifyAdmins(title, body) {
         console.error("Erro ao notificar admins:", e);
     }
 }
-// ALTERAÇÃO FINALIZADA
 
 
 // Funções de UI
@@ -1052,7 +1028,7 @@ function abrirModal(id) {
     }
 }
 
-// ALTERAÇÃO INICIADA: LÓGICA DE PERMISSÃO E SETUP DO FCM
+
 function solicitarPermissaoNotificacao() {
     if ('Notification' in window && Notification.permission === 'default') {
         abrirModal('modalPermissaoNotificacao');
@@ -1067,6 +1043,32 @@ function pedirPermissaoEFechar() {
     fecharModal({ target: document.getElementById('modalPermissaoNotificacao') });
 }
 
+// ALTERAÇÃO INICIADA: Lógica de setup e atualização de token aprimorada
+async function garantirTokenAtualizadoNoPerfil(uid) {
+    try {
+        const currentToken = await messaging.getToken({ vapidKey: 'BMNfC7dJgR53-l-F7jFv18T7-s6L3aQY6P6g7dF7-Z9G4dZ9G4rG4P6P-g' });
+        if (currentToken) {
+            const userRef = db.collection('usuarios').doc(uid);
+            const userDoc = await userRef.get();
+            if (userDoc.exists) {
+                const tokens = userDoc.data().fcmTokens || [];
+                if (!tokens.includes(currentToken)) {
+                    console.log('Token atual não encontrado no perfil. Adicionando...');
+                    await userRef.update({
+                        fcmTokens: firebase.firestore.FieldValue.arrayUnion(currentToken)
+                    });
+                    console.log('Token atualizado no perfil com sucesso.');
+                } else {
+                    console.log('Token atual já está no perfil.');
+                }
+            }
+        }
+    } catch(err) {
+        console.error('Erro ao garantir token atualizado:', err);
+    }
+}
+
+
 function setupFCM(uid) {
     if (fcmSetupDone || !firebase.messaging.isSupported()) {
         return;
@@ -1075,22 +1077,30 @@ function setupFCM(uid) {
     Notification.requestPermission().then((permission) => {
         if (permission === 'granted') {
             console.log('Permissão para notificação concedida.');
-            fcmSetupDone = true; // Marca como concluído após a permissão ser concedida
+            fcmSetupDone = true; 
             
-            messaging.getToken({ vapidKey: 'BMNfC7dJgR53-l-F7jFv18T7-s6L3aQY6P6g7dF7-Z9G4dZ9G4rG4P6P-g' }).then((currentToken) => {
-                if (currentToken) {
-                    console.log('Token FCM obtido:', currentToken);
-                    const userRef = db.collection('usuarios').doc(uid);
-                    userRef.update({
-                        fcmTokens: firebase.firestore.FieldValue.arrayUnion(currentToken)
-                    }).then(() => console.log('Token FCM salvo no perfil.'))
-                      .catch(err => console.error('Erro ao salvar token FCM:', err));
-                } else {
-                    console.log('Nenhum token de registro disponível. Solicite permissão para gerar um.');
+            garantirTokenAtualizadoNoPerfil(uid);
+
+            // Listener para quando o token é atualizado
+            messaging.onTokenRefresh(async () => {
+                console.log('Token foi atualizado pelo FCM.');
+                try {
+                    const refreshedToken = await messaging.getToken({ vapidKey: 'BMNfC7dJgR53-l-F7jFv18T7-s6L3aQY6P6g7dF7-Z9G4dZ9G4rG4P6P-g' });
+                    if (refreshedToken) {
+                        console.log('Novo token gerado:', refreshedToken);
+                        const user = auth.currentUser;
+                        if(user) {
+                           await db.collection('usuarios').doc(user.uid).update({
+                                fcmTokens: firebase.firestore.FieldValue.arrayUnion(refreshedToken)
+                           });
+                           console.log('Token atualizado salvo no perfil.');
+                        }
+                    }
+                } catch (err) {
+                    console.error('Não foi possível obter o token atualizado.', err);
                 }
-            }).catch((err) => {
-                console.log('Ocorreu um erro ao recuperar o token.', err);
             });
+
         } else {
             console.log('Permissão para notificação foi negada.');
         }
@@ -1305,12 +1315,10 @@ document.getElementById('tipo').addEventListener('change', (e) => {
 });
 
 auth.onAuthStateChanged(async user => {
-  // ALTERAÇÃO INICIADA: Limpar intervalo de verificação de versão ao deslogar
   if (versaoInterval) {
     clearInterval(versaoInterval);
     versaoInterval = null;
   }
-  // ALTERAÇÃO FINALIZADA
 
   if (!user) {
     userView = { originalType: null, currentType: null };
@@ -1351,9 +1359,10 @@ auth.onAuthStateChanged(async user => {
   userView.currentType = perfil.tipo;
   renderCurrentView();
 
-  // ALTERAÇÃO INICIADA: Chamadas para novas funcionalidades pós-login
   solicitarPermissaoNotificacao();
   verificarVersaoApp();
+  // ALTERAÇÃO INICIADA: Garantir que o token está atualizado após o login
+  setupFCM(user.uid);
   // ALTERAÇÃO FINALIZADA
 
   setTimeout(() => {
@@ -1392,7 +1401,6 @@ auth.onAuthStateChanged(async user => {
         });
 });
 
-// ALTERAÇÃO INICIADA: Funções para instalar PWA e verificar versão
 window.addEventListener('beforeinstallprompt', (e) => {
     e.preventDefault();
     deferredInstallPrompt = e;
@@ -1418,11 +1426,10 @@ async function verificarVersaoApp() {
             if (versaoAtualFirestore && versaoAtualFirestore !== APP_VERSION) {
                 console.warn(`Versão desatualizada. App: ${APP_VERSION}, Servidor: ${versaoAtualFirestore}`);
                 abrirModal('modalAtualizacao');
-                // Nag a cada 2 minutos
                 if (versaoInterval) clearInterval(versaoInterval);
                 versaoInterval = setInterval(() => {
                     abrirModal('modalAtualizacao');
-                }, 120000); // 120000 ms = 2 minutos
+                }, 120000); 
             } else {
                 console.log("App está atualizado.");
             }
@@ -1431,7 +1438,6 @@ async function verificarVersaoApp() {
         console.error("Erro ao verificar versão do app:", error);
     }
 }
-// ALTERAÇÃO FINALIZADA
 
 
 async function abrirPortaSecreta() {
