--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>💈 Navalha de Ouro</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+<link rel="manifest" href="/manifest.json">
+  <meta charset="UTF-8">
+  
+  <link rel="icon" href="/icone.png" type="image/png">
+  <link rel="apple-touch-icon" href="/icone.png">
+  <title>💈 Navalha de Ouro</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     :root {
       --cor-fundo: #0c0c0c;
